--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ h2 {
   font-size: 30px;
   font-weight: 700;
 }
+h3 {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
 
 p {
   padding-right: 10px;
@@ -107,14 +112,41 @@ p {
   margin-left: 40px;
 }
 
-.corna-header {
+.next-level {
   text-align: center;
-  margin-bottom: 5%;
-  font-family: "Poppins", sans-serif;
 }
 
-#corona-item {
-  margin-left: -15%;
+.next-h2 {
+  font-size: 35px;
+  font-weight: 700;
+  color: #181d31;
+}
+
+.you {
+  font-size: 65px;
+  font-style: italic;
+  font-weight: 700;
+  margin-top: -3%;
+  background: linear-gradient(rgb(117, 7, 241), rgb(245, 10, 10));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.para {
+  font-size: 20px;
+  font-weight: normal;
+  color: #181d31;
+  margin-top: -3%;
+}
+
+.upgrade {
+  width: 30%;
+  text-align: center;
+  padding: 20px 15px;
+  box-shadow: 10px 10px 40px gray;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 10px;
 }
 
 footer {
