--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@ h1 {
   padding-left: 10px;
 }
 
-.top-border {
-  border-left: 3px solid tomato;
-  height: 26%;
-}
-
 h2 {
   font-size: 30px;
   font-weight: 700;
@@ -23,8 +18,22 @@ p {
   padding-right: 10px;
 }
 
+.top-border {
+  border-left: 3px solid tomato;
+  height: 22%;
+}
+
 .orange-color {
   color: orange;
+}
+
+.top-section {
+  max-width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flexible-container {
@@ -32,17 +41,15 @@ p {
   margin-bottom: 150px;
 }
 
-.half-width {
-  width: 50%;
-  padding-left: 5%;
+.banner-left {
+  width: 60%;
 }
 
-#left-side {
-  margin-top: 5%;
+.banner-right {
+  width: 40%;
 }
-
-.half-width img {
-  width: 65%;
+.banner-right img {
+  width: 100%;
 }
 
 .link-button {
@@ -53,6 +60,10 @@ p {
   border-radius: 10px;
 }
 
+.link-button:hover {
+  background-color: red;
+}
+
 .last-para {
   margin-top: 20px;
   font-size: 14px;
@@ -61,21 +72,23 @@ p {
 /* mission-area */
 
 .mission-area {
-  width: 75%;
-  margin: 0 auto;
-  text-align: center;
+  max-width: 1150px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .mission-area h1 {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
+  text-align: center;
 }
 
 .mission-item {
   width: 30%;
-  margin-left: 2%;
-  margin-right: 2%;
-  padding-left: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
+  padding-left: 20px;
+  padding-top: 10px;
   text-align: left;
 }
 
@@ -97,17 +110,59 @@ p {
   border-radius: 20px;
 }
 
-/* develop section  */
-#dev-area {
-  margin-left: -15%;
-  margin-right: 20px;
+.develop-area {
+  max-width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
 }
 
-#global-img {
-  margin-left: 40px;
+.develop-image {
+  width: 40%;
+}
+
+.develop-image img {
+  width: 100%;
+}
+
+.develop-intro {
+  width: 60%;
+  padding-left: 40px;
+}
+
+.global-area {
+  max-width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.global-image {
+  width: 40%;
+}
+
+.global-image img {
+  width: 100%;
+}
+
+.global-intro {
+  width: 60%;
+  padding-right: 40px;
 }
 
 .next-level {
+  max-width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.next-level-title {
   text-align: center;
 }
 
@@ -122,7 +177,7 @@ p {
   font-style: italic;
   font-weight: 700;
   margin-top: -3%;
-  color: #6e3cbc;
+  color: #894bee;
 }
 
 .para {
@@ -135,10 +190,10 @@ p {
 .upgrade {
   width: 30%;
   text-align: center;
-  padding: 20px 15px;
-  box-shadow: 10px 10px 40px gray;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding: 25px 15px;
+  box-shadow: 10px 10px 35px gray;
+  margin-left: 14px;
+  margin-right: 14px;
   border-radius: 10px;
 }
 
